Added v2 version without controller
