# src/main/java/com/lbd/projectlbd/dto/CheckpointDto.java
@@ -1,17 +1,16 @@
 package com.lbd.projectlbd.dto;
 
-import com.fasterxml.jackson.annotation.JsonInclude;
 import lombok.Getter;
 import lombok.Setter;
 
 import javax.validation.constraints.NotNull;
 
-@JsonInclude(JsonInclude.Include.NON_NULL)  // universal DTO mapper (hide null fields)
 @Setter @Getter
 public class CheckpointDto {
-    @NotNull private Long delegationId;
-    @NotNull private Long masterDataCheckpointId;
-    @NotNull private String comment;
+    private long id;
+    private Long delegationId;
+    private Long masterDataCheckpointId;
+    private String comment;
     private String description;
     private Boolean isChecked = false;
 }
