# src/main/java/com/lbd/projectlbd/entity/Checkpoint.java
@@ -4,7 +4,10 @@ import lombok.*;
 import org.hibernate.Hibernate;
 
 import javax.persistence.*;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Objects;
+import java.util.Set;
 
 @Entity
 @Table(name = "DELEGATION_CHECKLIST")
@@ -20,13 +23,14 @@ public class Checkpoint {
     @Column(name = "checkpoint_id") private Long masterDataCheckpointId;
     @Column(name = "is_checked")    private Boolean isChecked;
     @Column(name = "description")   private String description;
-    @Column(name = "comment")       private String comment;
+
 
     @ManyToOne
     @JoinColumn(name = "delegation_id")
     private Delegation delegation;
 
-
+    @OneToMany(mappedBy = "checkpoint", cascade = CascadeType.ALL, fetch = FetchType.LAZY, orphanRemoval = true)
+    private List<CommentToCheckpoint> commentToCheckpointList = new ArrayList<>();
     @Override
     public boolean equals(Object o) {
         if (this == o) return true;
